# new-file

./: .dockerignore  .replit  Dockerfile  Procfile  app.py  build.sh  models.py  pyproject.toml  replit.md  requirements.txt  routes.py
instance/: smart_converter.db
services/: ocr_service.py
smart_file_converter/: README.md  pyproject.toml  replit.md
smart_file_converter/services/: cloud_storage.py
smart_file_converter/templates/: base.html  history.html  my_files.html  settings.html  upload.html
smart_file_converter/templates/pdf_tools/: images_to_pdf.html  merge.html  split.html
static/css/: style.css
static/js/: app.js
static/processed/: .gitkeep
templates/: 500.html  base.html  convert.html  extract_text.html  index.html  upload.html
templates/pdf_tools/: compress.html  images_to_pdf.html  merge.html  pdf_to_images.html  split.html
